
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int s_addr ;
typedef int buf2 ;
typedef int buf ;


 int IPPROTO_TCP ;
 int PF_INET ;
 int SOCK_STREAM ;
 int SWAT_PORT ;
 char* USER_AGENT ;
 char* base64_encode (char*) ;
 int chop (char*) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int htons (int ) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 int printf (char*,char*) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*,char*) ;
 int stderr ;
 int strlen (char*) ;
 int * strstr (char*,char*) ;

int check_user(char *name, char *pass, struct hostent *he)
{
 char buf[8192]="";
 char buf2[1024]="";
 int s;
 struct sockaddr_in s_addr;

 memset(buf, 0, sizeof(buf));
 memset(buf2, 0, sizeof(buf2));

 s_addr.sin_family = PF_INET;
 s_addr.sin_port = htons(SWAT_PORT);
 memcpy((char *) &s_addr.sin_addr, (char *) he->h_addr,
        sizeof(s_addr.sin_addr));

 if((s=socket(PF_INET, SOCK_STREAM, IPPROTO_TCP)) == -1)
    {
     fprintf(stderr, "cannot create socket\n");
     exit(-1);
    }

 if(connect(s, (struct sockaddr *) &s_addr, sizeof(s_addr))==-1)
    {
     fprintf(stderr, "cannot connect\n");
     exit(-1);
    }

 chop(name);
 chop(pass);
 sprintf(buf2, "%s:%s", name, pass);
 sprintf(buf, "GET / HTTP/1.0\n"
              "Connection: Keep-Alive\n"
              "User-Agent: %s\n"
              "Authorization: Basic %s\n\n", USER_AGENT, base64_encode(buf2));

 if(send(s, buf, strlen(buf), 0) < 1)
    {
     perror("send: ");
     exit(1);
    }

 memset(buf, 0, sizeof(buf));
 if(recv(s, buf, sizeof(buf), 0) < 1)
    {
     perror("recv: ");
     exit(1);
    }

 buf[sizeof(buf)]='\0';

 if(strstr(buf, "HTTP/1.0 401 Authorization Required") != ((void*)0))
    {
  close(s);
     return 1;
    }
 else if(strstr(buf, "HTTP/1.0 401 Bad Authorization") != ((void*)0))
    {
  close(s);
     return 0;
    }
 else if(strstr(buf, "HTTP/1.0 200 OK") != ((void*)0))
 {
  close(s);
  return 2;
 }
 else
    {
     printf("Unknown result: %s\n", buf);
     exit(1);
    }
}
